# InformationModel

./: .gitignore  AUTHORS  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
fim/: README.md  __init__.py  pluggable.py  view_only_dict.py
fim/authz/: attribute_collector.py
fim/graph/: README.md  abc_property_graph.py  abc_property_graph_constants.py  delegations.py  graph_util.py  graph_validation_rules.json  neo4j_property_graph.py  networkx_mixin.py  networkx_property_graph.py  networkx_property_graph_disjoint.py  pools.py  typed_tuples.py
fim/logging/: fim_logger.py  log_collector.py
fim/slivers/: AttachedPCIDevices.py  BaseElement.py  InterfaceInfo.py  NetworkAttachedStorage.py  NetworkLink.py  Node.py  README.md  StitchPort.py  __init__.py  attached_components.py  attached_pci_devices.py  base_sliver.py  capacities_labels.py  component_catalog.py  delegations.py  gateway.py  identifiers.py  instance_catalog.py  interface_info.py  json.py  json_data.py  maintenance_mode.py  measurement_data.py  network_link.py  tags.py  (+7 more)
test/: ad_topology_test.py  after.graphml  attribute_collector_test.py  before.graphml  catalog_test.py  delegation_label_test.py  maintenance_test.py  modify_test.py  neo4j-basic-tests.py  networkxx_pg_disjoint_test.py  networkxx_pg_test.py  pluggable_test.py  pluggable_tests.py  slice_topology_test.py  sliver_json_test.py  sliver_test.py  substrate_topology_test.py  test_harness.py  test_load.py  test_topology.py  testrenciad.py  tuple_test.py  tuple_tests.py  zz_neo4j_pg_test.py
util/: fim_util.py
(+49 files in other folders)
