[build-system]
requires = ["flit_core>=3.8"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric_fim"
authors = [{name = "Ilya Baldin", email = "ibaldin@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License",
		"Programming Language :: Python :: 3",
		"Operating System :: OS Independent"]
dynamic = ["version", "description"]
requires-python = '>=3.9'
keywords = ["Neo4j"]
dependencies = [ 
	"matplotlib >= 3.6.0",
	"neo4j >= 5.3.0",
	"networkx >= 3.1",
	"networkx-query >= 2.0.0",
	"PyYAML >= 6.0",
	"recordclass >= 0.17.5",
	"requests >= 2.28.1",
	"lxml >= 4.9.2"
	]

[project.scripts]
fim_util = "fim.util.fim_util:main"

[project.urls]
Home = "https://github.com/fabric-testbed/InformationModel"

[tool.flit.module]
name = "fim"

[project.optional-dependencies]
test = ["pytest"]

